All_Component_DX/force-app/main/default/objects/Timesheet__c/Timesheet__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>This object refers to timesheet records created for every user for a particular duration.</description>
    <label>Timesheet</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Timesheet ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>