All_Component_DX/force-app/main/default/objects/Timesheet__c/fields/SM_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>SM_Business_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipLabel>Timesheets</relationshipLabel>
    <relationshipName>Timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>