All_Component_DX/force-app/main/default/objects/Timesheet__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field refers to the User for whom Timesheet Header is created.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>